# crew-demo-app

./: .bazelignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  PRD.md  README.md  go.mod  go.sum  pnpm-lock.yaml  prd.md
cmd/api/: BUILD.bazel  main.go  main_test.go
cmd/migrate/: BUILD.bazel
cmd/seed/: BUILD.bazel  main.go
deploy/: BUILD.bazel
deploy/app/: api-deployment.yaml  gateway-deployment.yaml
deploy/app/base/: api-deployment.yaml  api-service.yaml  gateway-deployment.yaml  gateway-service.yaml  http-route.yaml  kustomization.yaml
deploy/app/overlays/preview/: kustomization.yaml
deploy/app/overlays/prod/: http-route-host.yaml  kustomization.yaml
deploy/infra/: postgres-cluster.yaml
deploy/migrations/: migration-job.yaml  setup-job.yaml
deploy/preview-infra/: kustomization.yaml  postgres-deployment.yaml  postgres-service.yaml
deploy/seed/: seed-job.yaml
docs/: README.md  architecture.md  data-flows.md  data-model.md  integrations.md  invariants.md  operations.md  patterns.md  testing.md  workflows.md
internal/api/: BUILD.bazel  agentmcp.go  agentmcp_test.go  agentquery.go  app.go  billing.go  billing_test.go  partner.go  partner_test.go  sample.go
internal/api/db/: BUILD.bazel  partner.go
internal/auth/: BUILD.bazel  authorization.go  browser.go  service.go
internal/auth/db/: BUILD.bazel
proto/sample/v1/: agentquery.proto  billing.proto  partner.proto  sample.proto
services/api/migrations/: 00002_create_partner_tables.sql  00003_add_subscription_columns.sql
services/gateway/: BUILD.bazel  gateway.json
web/: BUILD.bazel  package.json  tsconfig.json  vite.config.mjs  vitest.setup.ts
web/src/: App.tsx  main.tsx  session.ts  styles.css
web/src/api/: billingClient.ts  clients.ts  partnerClient.ts
web/src/components/: AppShell.tsx  StatusBadge.tsx
web/src/lib/: csv.test.ts  csv.ts  format.test.ts  format.ts
web/src/routes/: AddPartner.test.tsx  AddPartner.tsx  BulkImport.tsx  Dashboard.test.tsx  Dashboard.tsx  Login.tsx  PartnerDetail.tsx  PublicOnboarding.tsx
