load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:prefix github.com/adiom-data/crew-demo-app
# Protos are generated with buf (see buf.gen.yaml); the gen/ BUILD files are
# hand-maintained. Keep gazelle from generating conflicting proto rules.
# gazelle:proto disable_global

gazelle(name = "gazelle")

exports_files(["package.json"])

npm_link_all_packages(name = "node_modules")
