load("@rules_flux_deploy//flux_deploy:defs.bzl", "deploy_image", "image_kustomization", "publish_bundle_set")

filegroup(
    name = "app_srcs",
    srcs = glob(["app/**"]),
)

filegroup(
    name = "infra_srcs",
    srcs = glob(["infra/**"]),
)

filegroup(
    name = "preview_infra_srcs",
    srcs = glob(["preview-infra/**"]),
)

filegroup(
    name = "migration_srcs",
    srcs = glob(["migrations/**"]),
)

deploy_image(
    name = "api_image",
    image = "//cmd/api:image",
    repository_suffix = "crew-demo-app-api",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-api",
)

deploy_image(
    name = "gateway_image",
    image = "//services/gateway:image",
    repository_suffix = "crew-demo-app-gateway",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-gateway",
)

deploy_image(
    name = "migrate_image",
    image = "//cmd/migrate:image",
    repository_suffix = "crew-demo-app-migrate",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-migrate",
)

image_kustomization(
    name = "infra_deploy",
    srcs = [":infra_srcs"],
    artifact_suffix = "crew-demo-app-infra-deploy",
    bundle_name = "infra",
    source_prefix = "deploy/infra",
)

image_kustomization(
    name = "preview_infra_deploy",
    srcs = [":preview_infra_srcs"],
    artifact_suffix = "crew-demo-app-preview-infra-deploy",
    bundle_name = "infra",
    source_prefix = "deploy/preview-infra",
)

image_kustomization(
    name = "migration_deploy",
    srcs = [":migration_srcs"],
    artifact_suffix = "crew-demo-app-migration-deploy",
    bundle_name = "migration",
    force = True,
    images = [":migrate_image"],
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/migrations",
    stamp = True,
)

image_kustomization(
    name = "app_deploy",
    srcs = [":app_srcs"],
    artifact_suffix = "crew-demo-app-deploy",
    bundle_name = "app",
    images = [
        ":api_image",
        ":gateway_image",
    ],
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    stamp = True,
)

publish_bundle_set(
    name = "publish",
    bundles = [
        ":infra_deploy",
        ":migration_deploy",
        ":app_deploy",
    ],
    manifest_tag = "release",
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    stamp = True,
)

publish_bundle_set(
    name = "publish_preview",
    bundles = [
        ":preview_infra_deploy",
        ":migration_deploy",
        ":app_deploy",
    ],
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    stamp = True,
)
