load("@rules_flux_deploy//flux_deploy:defs.bzl", "deploy_image", "image_kustomization", "publish_bundle_set")

filegroup(
    name = "app_srcs",
    srcs = glob(["app/**"]),
)

filegroup(
    name = "infra_srcs",
    srcs = glob(["infra/**"]),
)

filegroup(
    name = "preview_infra_srcs",
    srcs = glob(["preview-infra/**"]),
)

filegroup(
    name = "migration_srcs",
    srcs = glob(["migrations/**"]),
)

filegroup(
    name = "seed_srcs",
    srcs = glob(["seed/**"]),
)

deploy_image(
    name = "api_image",
    image = "//cmd/api:image",
    repository_suffix = "crew-demo-app-api",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-api",
)

deploy_image(
    name = "gateway_image",
    image = "//services/gateway:image",
    repository_suffix = "crew-demo-app-gateway",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-gateway",
)

deploy_image(
    name = "migrate_image",
    image = "//cmd/migrate:image",
    repository_suffix = "crew-demo-app-migrate",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-migrate",
)

deploy_image(
    name = "seed_image",
    image = "//cmd/seed:image",
    repository_suffix = "crew-demo-app-seed",
    yaml_ref = "ghcr.io/adiom-data/crew-demo-app-seed",
)

image_kustomization(
    name = "infra_deploy",
    srcs = [":infra_srcs"],
    artifact_suffix = "crew-demo-app-infra-deploy",
    bundle_name = "infra",
    source_prefix = "deploy/infra",
)

image_kustomization(
    name = "preview_infra_deploy",
    srcs = [":preview_infra_srcs"],
    artifact_suffix = "crew-demo-app-preview-infra-deploy",
    bundle_name = "infra",
    source_prefix = "deploy/preview-infra",
)

image_kustomization(
    name = "migration_deploy",
    srcs = [":migration_srcs"],
    artifact_suffix = "crew-demo-app-migration-deploy",
    bundle_name = "migration",
    force = True,
    images = [":migrate_image"],
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/migrations",
    stamp = True,
)

# Preview-only demo-data seeder. Wired into publish_preview after the migration
# bundle; not part of the release publish set (prod is never auto-seeded).
image_kustomization(
    name = "seed_deploy",
    srcs = [":seed_srcs"],
    artifact_suffix = "crew-demo-app-seed-deploy",
    bundle_name = "seed",
    force = True,
    images = [":seed_image"],
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/seed",
    stamp = True,
)

image_kustomization(
    name = "app_deploy",
    srcs = [":app_srcs"],
    artifact_suffix = "crew-demo-app-deploy",
    bundle_name = "app",
    images = [
        ":api_image",
        ":gateway_image",
    ],
    kustomize_dirs = ["base"],
    overlay_path = "overlays/prod",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    stamp = True,
)

# Same base, but the preview overlay omits the host patch so previews stay
# portable (host bound per tenant namespace). Prod pins t-crew-demo.infrapad.ai
# via overlays/prod.
image_kustomization(
    name = "app_preview_deploy",
    srcs = [":app_srcs"],
    artifact_suffix = "crew-demo-app-deploy",
    bundle_name = "app",
    images = [
        ":api_image",
        ":gateway_image",
    ],
    kustomize_dirs = ["base"],
    overlay_path = "overlays/preview",
    repository_prefix_override_all = "{STABLE_REFERENCE_PREFIX}",
    source_prefix = "deploy/app",
    stamp = True,
)

publish_bundle_set(
    name = "publish",
    bundles = [
        ":infra_deploy",
        ":migration_deploy",
        ":app_deploy",
    ],
    manifest_tag = "release",
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    stamp = True,
)

publish_bundle_set(
    name = "publish_preview",
    bundles = [
        ":preview_infra_deploy",
        ":migration_deploy",
        ":seed_deploy",
        ":app_preview_deploy",
    ],
    push_prefix = "{STABLE_REFERENCE_PREFIX}",
    stamp = True,
)
