load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "seed_lib",
    srcs = ["main.go"],
    importpath = "github.com/adiom-data/crew-demo-app/cmd/seed",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/api/db",
        "@com_github_caarlos0_env_v11//:env",
    ],
)

go_binary(
    name = "seed",
    embed = [":seed_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
