load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "seed_lib",
    srcs = ["main.go"],
    importpath = "github.com/adiom-data/crew-demo-app/cmd/seed",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/api/db",
        "@com_github_caarlos0_env_v11//:env",
    ],
)

go_binary(
    name = "seed",
    embed = [":seed_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

platform_transition_filegroup(
    name = "seed_linux_amd64",
    srcs = [":seed"],
    target_platform = "@rules_go//go/toolchain:linux_amd64",
)

pkg_tar(
    name = "seed_layer",
    srcs = [":seed_linux_amd64"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/seed"],
    tars = [":seed_layer"],
    user = "65532:65532",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["crew-demo-app-seed:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/adiom-data/crew-demo-app-seed",
)
