load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "app.go",
        "partner.go",
        "sample.go",
    ],
    importpath = "github.com/adiom-data/crew-demo-app/internal/api",
    visibility = ["//cmd/api:__pkg__"],
    deps = [
        "//gen/go/sample/v1:samplev1",
        "//gen/go/sample/v1/samplev1connect",
        "//internal/api/db",
        "//internal/auth",
        "@com_connectrpc_connect//:connect",
        "@com_github_adiom_data_framework//auth/tokenissuer",
        "@com_github_adiom_data_framework//httpapp",
    ],
)

go_test(
    name = "api_test",
    srcs = ["partner_test.go"],
    embed = [":api"],
    deps = [
        "//gen/go/sample/v1:samplev1",
        "//internal/api/db",
    ],
)
