load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "agentmcp.go",
        "agentquery.go",
        "app.go",
        "partner.go",
        "sample.go",
    ],
    importpath = "github.com/adiom-data/crew-demo-app/internal/api",
    visibility = ["//cmd/api:__pkg__"],
    deps = [
        "//gen/go/sample/v1:samplev1",
        "//gen/go/sample/v1/samplev1connect",
        "//internal/api/db",
        "//internal/auth",
        "@com_connectrpc_connect//:connect",
        "@com_github_adiom_data_framework//auth/tokenissuer",
        "@com_github_adiom_data_framework//httpapp",
        "@com_github_adiom_data_grpcmcp//grpcmcp",
        "@com_github_mark3labs_mcp_go//server",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "agentmcp_test.go",
        "partner_test.go",
    ],
    embed = [":api"],
    deps = [
        "//gen/go/sample/v1:samplev1",
        "//gen/go/sample/v1/samplev1connect",
        "//internal/api/db",
        "@com_connectrpc_connect//:connect",
        "@com_github_mark3labs_mcp_go//client",
        "@com_github_mark3labs_mcp_go//client/transport",
        "@com_github_mark3labs_mcp_go//mcp",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)
